nocodb/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nocodb
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      containers:
      - name: nocodb
        image: ghcr.io/pmh-only/nocodb:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/app/data/
          name: nocodb-storage
      volumes:
      - name: nocodb-storage
        persistentVolumeClaim:
          claimName: nocodb-pvc
