nocodb/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nocodb-service
spec:
  selector:
    app: nocodb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
